--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     const session = 'demo'
     console.log('loading data: url', domain, dataFolder)
     let params = networkcube.getUrlVars()
-    if (!params['datasetName']) window.location.href = `${domain}?session=demo&datasetName=scientists`
+    if (!params['datasetName']) window.location.href = `${domain}?session=demo&datasetName=Scientists`
   </script>
   <script type="module" src="./src/js/main.js"></script>
   <script src="./lib/js/jquery-3.4.1.min.js"></script>
@@ -122,15 +122,17 @@
         <div id="styleConfigDiv">
           <div id="data_selection" class="m-2">
             <div class="row wrapper">
-              <div class="col-5 wrapper">
-                Dataset:
-              </div>
-              <div class="dropdown">
+              <!-- <div class="col-4 wrapper pl-4 ml-1">
+                  <p class="config-title m-0 p-0">Data</p>
+              </div> -->
+              <div class="col-8 ml-1 mr-1 pl-4 pr-0 dropdown">
                 <button class="btn btn-light btn-sm dropdown-toggle z-depth-0 p-1 m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 </button>
                 <div id="dataset-selection" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 </div>
-                <span id="dataConfigButton" onclick="showDataConfig()"><i class="fas fa-table" style="fill: lightslategray;"></i></span>
+              </div>
+              <div class="col-2 p-0 m-0" style="text-align:right;">
+                <span id="dataConfigButton" onclick="showDataConfig()"><i class="fas fa-table" style="fill: lightslategray;right:0;"></i></span>
               </div>
             </div>
           </div>
@@ -151,7 +153,7 @@
           <div class="ml-4 mr-2">
             <p class="m-0 config-title">Measure Visibility</p>
           </div>
-          <div id="config-measure" class="ml-4 mr-2 scrollbar scrollbar-sunny-morning thin" style="line-height: initial; height:20vh; overflow-y: scroll">
+          <div id="config-measure" class="ml-4 mr-2 scrollbar scrollbar-sunny-morning thin sortable" style="line-height: initial; height:20vh; overflow-y: scroll">
           </div>
 
           <div style="width:92%; border-bottom:lightgray solid 1px;margin-bottom:1px;margin-top:1px;"></div>
@@ -207,42 +209,52 @@
 
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="intervalConfigDiv" role="tabpanel" aria-labelledby="interval-config-tab">
-              <div id="config-interval" class="config p-4">
+              <div id="config-interval" class="config pt-2 pl-4 pr-4">
                 <div class="form-group container m-0 p-0">
-                  <div class="row p-0">
-                    <div class="col-6 m-0  md-form">
-                      <input type="text" id="interval-value-input" class="form-control pt-0">
-                      <label for="interval-value-input" class="pl-3"></label>
-                    </div>
-                    <div class="col-4 mt-1 ml-0 mb-0 mr-0 p-0">
-                      <select class="form-control form-control-sm" id="granularity-selection">
-                      </select>
-                    </div>
-                    <div class="col-1 m-1 p-0">
-                      <button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="addInputInterval"><i class="fas fa-plus-square"></i></button>
-                    </div>
-                  </div>
-
                   <div>
+                    <div class="p-0 m-0">
+                      <p class="mt-2 mb-1 config-title" style="font-size: 1rem">Calendar-based Intervals:</p>
+                      <div id="calendar-interval-selection-display"></div>
+                    </div>
                     <div class="row p-0 m-0">
-                      <div class="col-7 p-0 m-0">
-                        <p class="mt-2 mb-1" style="font-size: 1rem">Interval Selection:</p>
+                      <div class="col-6 p-0 m-0">
+                        <p class="m-0 config-title" style="font-size: 1rem">Create Intervals:</p>
                       </div>
-                      <div class="col-3 p-0 mt-1">
+                      <div class="col-6 p-0 m-0" id="shift-slider-value" style="display:none">
+                        <div class="row m-0 p-0">
+                          <div class="col-9 p-0 m-0">
                         <input type="range" step="0.01" min="-0.5" max="0.5" value="0" class="slider" id="config-shift">
                       </div>
-                      <div class="col-2 p-0 m-0" id="shift-slider-value">
-
+                    <div class="col-2 m-0 p-0">
+                        <span id="shift-hint" style="right:0"></span>
+                      </div>
+                      </div>
                       </div>
                     </div>
-                    <div id="interval-selection-display"></div>
+                        <div id="interval-selection-display"></div>
+                      <div class="row p-0">
+                        <div class="col-6 m-0  md-form">
+                          <input type="text" id="interval-value-input" class="form-control pt-0" style="font-size:large; text-align:center;padding:0;margin: 0.3rem 0 0 0">
+                          <label for="interval-value-input" class="pl-3"></label>
+                        </div>
+                        <div class="col-4 mt-1 ml-0 mb-0 mr-0 p-0">
+                          <select class="form-control form-control-sm" id="granularity-selection">
+                          </select>
+                        </div>
+                        <div class="col-1 m-1 p-0">
+                          <button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="addInputInterval"><i class="fas fa-plus-square"></i></button>
+                        </div>
+                      </div>
+                    </div>
                   </div>
+                <div class="p-0 m-0">
+                  <p class="mt-0 mb-1 config-title" style="font-size: 1rem">Intervals from Fourier Transform:</p>
                 </div>
+                <div id="fft-interval-selection-display"></div>
                 <div id="fft-result-div" style="width:100%; min-height: 10vh;">
-
                 </div>
                 <div style="text-align: center;  position: absolute; bottom: 10px; width:100%;">
-                  <div ><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="exportMeasure"><i class="fas fa-file-export"></i>Export</button> </div>
+                  <div><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="exportMeasure"><i class="fas fa-file-export"></i>Export</button> </div>
                   <!-- <div class="col-4"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="testInterval"><i class="fas fa-vial"></i>Test</button></div>
                     <div class="col-4"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="resetInterval"><i class="fas fa-check-square"></i>Apply</button></div>
                   <div class="col-4"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="restoreInterval"><i class="fas fa-undo"></i>Reset</button></div> -->
